--- a/index.html
+++ b/index.html
@@ -18,26 +18,49 @@
     <div class="mainContainer">
         <div class="mainContainer__tecnology">
             <img src="Tecnologia" title="" class="img_tec">
-            <a href="#">Lenguage de programacion/tecnologia</a>
+            <a href="#">HTML</a>
         </div>
         <div class="mainContainer__tecnology">
             <img src="Tecnologia" title="" class="img_tec">
-            <a href="#">Lenguage de programacion/tecnologia</a>
+
+            <a href="#">CSS</a>
+            <br><br>
+            <select name="css" id="selectCSS" class="select">
+                <option value="mainCss">
+                    CSS<br>
+                </option>
+                <option value="metodologiaBEM">
+                    metodologia BEM<br>
+                </option>
+            </select>
         </div>
         <div class="mainContainer__tecnology">
             <img src="Tecnologia" title="" class="img_tec">
-            <a href="#">Lenguage de programacion/tecnologia</a>
+
+            <a href="#">JAVASCRIPT</a>
+            <br><br>
+            <select name="js" id="selectCSS" class="select">
+                <option value="basicoJS">
+                    Nivel Basico <br>
+                </option>
+                <option value="medioJS">
+                    Nivel Medio<br>
+                </option>
+                <option value="avanzadoJS">
+                    Nivel Avanzado<br>
+                </option>
+            </select>
         </div>
     </div>
     <!--separador-->
 
         <footer>
-            <div class="footer_text">
-                Creado el 1 de Junio de 2022
+            <div class="footer__text">
+                Creado el 1 de Julio de 2022
             </div class="footer_text">
             <br>
             <div class="footer_text">
-                <a href="#">Cab-Code</a>
+                <a href="https://github.com/Cab-Code">Cab-Code</a>
             </div class="footer_text">
         </footer>
     
