--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     </header>
     <!--En este espacion estaran alojados los cuadernos virtuales de cada tecnologia aprendida-->
     <div class="mainContainer">
+         <div class="mainContainer__tecnology">
+            <img src="Tecnologia" title="" class="img_tec">
+            <a href="GIT_notebook/git.html">GIT</a>
+        </div>
         <div class="mainContainer__tecnology">
             <img src="Tecnologia" title="" class="img_tec">
             <a href="#">HTML</a>
@@ -24,7 +28,6 @@
             <img src="Tecnologia" title="" class="img_tec">
 
             <a href="#">CSS</a>
-            <br><br>
             <select name="css" id="selectCSS" class="select">
                 <option value="mainCss">
                     CSS<br>
@@ -38,8 +41,7 @@
             <img src="Tecnologia" title="" class="img_tec">
 
             <a href="#">JAVASCRIPT</a>
-            <br><br>
-            <select name="js" id="selectCSS" class="select">
+            <select name="js" id="selectJS" class="select">
                 <option value="basicoJS">
                     Nivel Basico <br>
                 </option>
@@ -57,11 +59,11 @@
         <footer>
             <div class="footer__text">
                 Creado el 1 de Julio de 2022
-            </div class="footer_text">
+            </div class="footer__text">
             <br>
-            <div class="footer_text">
-                <a href="https://github.com/Cab-Code">Cab-Code</a>
-            </div class="footer_text">
+            <div class="footer__text">
+                <a href="https://github.com/Cab-Code" class="footer__text">Cab-Code</a>
+            </div class="footer__text">
         </footer>
     
 </body>
