--- a/index.html
+++ b/index.html
@@ -17,17 +17,14 @@
     <!--En este espacion estaran alojados los cuadernos virtuales de cada tecnologia aprendida-->
     <div class="mainContainer">
          <div class="mainContainer__tecnology">
-            <img src="Tecnologia" title="" class="img_tec">
-            <a href="GIT_notebook/git.html">GIT</a>
+           
+            <a href="GIT_notebook/git.html">  <img src="Tecnologia" title="" class="img_tec">GIT</a>
         </div>
         <div class="mainContainer__tecnology">
-            <img src="Tecnologia" title="" class="img_tec">
-            <a href="#">HTML</a>
+            <a href="#"><img src="Tecnologia" title="" class="img_tec">HTML</a>
         </div>
         <div class="mainContainer__tecnology">
-            <img src="Tecnologia" title="" class="img_tec">
-
-            <a href="#">CSS</a>
+            <a href="#"><img src="Tecnologia" title="" class="img_tec">CSS</a>
             <select name="css" id="selectCSS" class="select">
                 <option value="mainCss">
                     CSS<br>
@@ -38,9 +35,7 @@
             </select>
         </div>
         <div class="mainContainer__tecnology">
-            <img src="Tecnologia" title="" class="img_tec">
-
-            <a href="#">JAVASCRIPT</a>
+            <a href="#"><img src="Tecnologia" title="" class="img_tec">JAVASCRIPT</a>
             <select name="js" id="selectJS" class="select">
                 <option value="basicoJS">
                     Nivel Basico <br>
