--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
             </select>
         </div>
     </div>
+    <div class="mainContainer__tecnology">
+        <a href="VUE_notebook/vue.html" id="vuelink"><img src="Tecnologia" title="" class="img_tec">Vue</a>
+    </div>
+</div>
     <!--separador-->
 
         <footer>
@@ -60,6 +64,7 @@
                 <a href="https://github.com/Cab-Code" class="footer__text">Cab-Code</a>
             </div class="footer__text">
         </footer>
+    <script src="app.js"></script>
     
 </body>
 </html>
